Control the name and the output of datasets in add_datasets
This avoids code duplication when computing the name of each dataset.
As a fly-by improvement, we also use a less repetitive name for the
datasets.

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -19,20 +19,22 @@ include(benchmark/dependencies/std)
 
 
 macro(add_dataset datasets dataset path_to_template range)
+    string(REGEX REPLACE "[^.]+[.][^.]+[.][^.]+[.](.*)" "\\1" name ${dataset})
+
     if(${dataset} MATCHES "brigand\\.")
-        Brigand_add_dataset(${dataset} ${path_to_template} ${range})
+        Brigand_add_dataset(${dataset} ${path_to_template} ${range} NAME ${name} OUTPUT ${name}.json)
     elseif(${dataset} MATCHES "fusion\\.")
-        Fusion_add_dataset(${dataset} ${path_to_template} ${range})
+        Fusion_add_dataset(${dataset} ${path_to_template} ${range} NAME ${name} OUTPUT ${name}.json)
     elseif(${dataset} MATCHES "hana\\.")
-        Hana_add_dataset(${dataset} ${path_to_template} ${range})
+        Hana_add_dataset(${dataset} ${path_to_template} ${range} NAME ${name} OUTPUT ${name}.json)
     elseif(${dataset} MATCHES "meta\\.")
-        Meta_add_dataset(${dataset} ${path_to_template} ${range})
+        Meta_add_dataset(${dataset} ${path_to_template} ${range} NAME ${name} OUTPUT ${name}.json)
     elseif(${dataset} MATCHES "metal\\.")
-        Metal_add_dataset(${dataset} ${path_to_template} ${range})
+        Metal_add_dataset(${dataset} ${path_to_template} ${range} NAME ${name} OUTPUT ${name}.json)
     elseif (${dataset} MATCHES "mpl\\.")
-        MPL_add_dataset(${dataset} ${path_to_template} ${range})
+        MPL_add_dataset(${dataset} ${path_to_template} ${range} NAME ${name} OUTPUT ${name}.json)
     elseif (${dataset} MATCHES "std\\.")
-        Std_add_dataset(${dataset} ${path_to_template} ${range})
+        Std_add_dataset(${dataset} ${path_to_template} ${range} NAME ${name} OUTPUT ${name}.json)
     else()
         message(FATAL_ERROR
             "The dataset named '${dataset}' does not appear to benchmark any "
