--- a/benchmark/type/reverse/CMakeLists.txt
+++ b/benchmark/type/reverse/CMakeLists.txt
@@ -9,5 +9,4 @@ add_dataset(datasets dataset.type.reverse.metal.list    metal.list.cpp.erb      
 add_dataset(datasets dataset.type.reverse.mpl.list      mpl.list.cpp.erb        "(0..50).step(1)")
 add_dataset(datasets dataset.type.reverse.mpl.vector    mpl.vector.cpp.erb      "(0..50).step(1)")
 
-metabench_add_benchmark(benchmark.type.reverse DATASETS ${datasets} OUTPUT index.html)
-add_dependencies(benchmarks benchmark.type.reverse)
+add_benchmark(benchmark.type.reverse DATASETS ${datasets})
