--- a/benchmark/type/transform/CMakeLists.txt
+++ b/benchmark/type/transform/CMakeLists.txt
@@ -7,5 +7,4 @@ add_dataset(datasets dataset.type.transform.metal.list    metal.list.cpp.erb  "(
 add_dataset(datasets dataset.type.transform.mpl.list      mpl.list.cpp.erb    "(0..50).step(1)")
 add_dataset(datasets dataset.type.transform.mpl.vector    mpl.vector.cpp.erb  "(0..50).step(1)")
 
-metabench_add_benchmark(benchmark.type.transform DATASETS ${datasets} OUTPUT index.html)
-add_dependencies(benchmarks benchmark.type.transform)
+add_benchmark(benchmark.type.transform DATASETS ${datasets})
