Do not add a benchmark when all the datasets are unsupported
Some benchmarks are only implemented on a few libraries (e.g. Hana).
This commit makes it so that we'll simply ignore the benchmark when
the datasets are not supported by the compiler, instead of failing as
we currently do.

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -50,8 +50,15 @@ endmacro()
 
 add_custom_target(benchmarks)
 macro(add_chart target)
-    metabench_add_chart(${target} ${ARGN} OUTPUT index.html)
-    add_dependencies(benchmarks ${target})
+    cmake_parse_arguments(ARGS "" "" "DATASETS" ${ARGN})
+
+    # If we have no datasets, perhaps they were all disabled in the current
+    # configuration. In this case, we omit the benchmark instead of failing.
+    list(LENGTH ARGS_DATASETS _n_datasets)
+    if (_n_datasets GREATER 0)
+        metabench_add_chart(${target} ${ARGN} OUTPUT index.html)
+        add_dependencies(benchmarks ${target})
+    endif()
 endmacro()
 
 
