--- a/benchmark/type/at/CMakeLists.txt
+++ b/benchmark/type/at/CMakeLists.txt
@@ -10,4 +10,4 @@ add_dataset(datasets dataset.type.at.metal.list     metal.list.cpp.erb      "(1.
 add_dataset(datasets dataset.type.at.mpl.list       mpl.list.cpp.erb        "(1..50).step(1)")
 add_dataset(datasets dataset.type.at.mpl.vector     mpl.vector.cpp.erb      "(1..50).step(1)")
 
-add_benchmark(benchmark.type.at DATASETS ${datasets})
+add_chart(benchmark.type.at DATASETS ${datasets})
