--- a/benchmark/type/replace_if/CMakeLists.txt
+++ b/benchmark/type/replace_if/CMakeLists.txt
@@ -10,4 +10,4 @@ add_dataset(datasets dataset.type.replace_if.metal.list    metal.list.cpp.erb   
 add_dataset(datasets dataset.type.replace_if.mpl.list      mpl.list.cpp.erb     "(0..50).step(1)")
 add_dataset(datasets dataset.type.replace_if.mpl.vector    mpl.vector.cpp.erb   "(0..50).step(1)")
 
-add_benchmark(benchmark.type.replace_if DATASETS ${datasets})
+add_chart(benchmark.type.replace_if DATASETS ${datasets})
