--- a/benchmark/type/reverse/CMakeLists.txt
+++ b/benchmark/type/reverse/CMakeLists.txt
@@ -9,4 +9,4 @@ add_dataset(datasets dataset.type.reverse.metal.list    metal.list.cpp.erb      
 add_dataset(datasets dataset.type.reverse.mpl.list      mpl.list.cpp.erb        "(0..50).step(1)")
 add_dataset(datasets dataset.type.reverse.mpl.vector    mpl.vector.cpp.erb      "(0..50).step(1)")
 
-add_benchmark(benchmark.type.reverse DATASETS ${datasets})
+add_chart(benchmark.type.reverse DATASETS ${datasets})
