--- a/test/add_dataset_custom_output_absolute/CMakeLists.txt
+++ b/test/add_dataset_custom_output_absolute/CMakeLists.txt
@@ -9,7 +9,7 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../..")
 include(metabench)
 
 metabench_add_dataset(dummy "dummy.cpp.erb" "[1, 2, 3]" OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/my/fancy/output.json)
-metabench_add_benchmark(check DATASETS dummy)
+metabench_add_chart(check DATASETS dummy)
 
 enable_testing()
 
