--- a/test/dataset_properties_on_ctest_targets/CMakeLists.txt
+++ b/test/dataset_properties_on_ctest_targets/CMakeLists.txt
@@ -11,6 +11,6 @@ include(metabench)
 
 enable_testing()
 metabench_add_dataset(dummy dummy.cpp.erb "[1, 2, 3]")
-metabench_add_benchmark(check DATASETS dummy)
+metabench_add_chart(check DATASETS dummy)
 
 target_compile_definitions(dummy PUBLIC -DCUSTOM_DEFINITION)
