--- a/benchmark/hetero/at/CMakeLists.txt
+++ b/benchmark/hetero/at/CMakeLists.txt
@@ -9,4 +9,4 @@ add_dataset(datasets dataset.hetero.at.hana.basic_tuple hana.basic_tuple.cpp.erb
 add_dataset(datasets dataset.hetero.at.hana.tuple       hana.tuple.cpp.erb          "(1..500).step(10)")
 add_dataset(datasets dataset.hetero.at.std.tuple        std.tuple.cpp.erb           "(1..100).step(10)")
 
-add_benchmark(benchmark.hetero.at DATASETS ${datasets})
+add_chart(benchmark.hetero.at DATASETS ${datasets})
