--- a/benchmark/type/transform/CMakeLists.txt
+++ b/benchmark/type/transform/CMakeLists.txt
@@ -7,4 +7,4 @@ add_dataset(datasets dataset.type.transform.metal.list    metal.list.cpp.erb  "(
 add_dataset(datasets dataset.type.transform.mpl.list      mpl.list.cpp.erb    "(0..50).step(1)")
 add_dataset(datasets dataset.type.transform.mpl.vector    mpl.vector.cpp.erb  "(0..50).step(1)")
 
-add_benchmark(benchmark.type.transform DATASETS ${datasets})
+add_chart(benchmark.type.transform DATASETS ${datasets})
