--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -30,12 +30,6 @@ install:
   - set PATH=C:\Ruby21-x64;C:\Ruby21-x64\bin;%PATH%
   - ruby --version
 
-  # Install Boost headers
-  - git clone --depth 1 --recursive --quiet http://github.com/boostorg/boost.git
-  - cd boost
-  - call bootstrap.bat
-  - call b2 headers
-
 before_build:
   - call "C:\Program Files (x86)\Microsoft Visual Studio %MSVC%\VC\vcvarsall.bat"
   - cd C:\projects\metabench
@@ -43,6 +37,6 @@ before_build:
 build_script:
   - mkdir build
   - cd build
-  - cmake .. -G"%CMAKE_GENERATOR%" -DBOOST_ROOT="C:\projects\metabench\boost"
+  - cmake .. -G"%CMAKE_GENERATOR%" -DBOOST_ROOT="C:\Libraries\boost_1_59_0"
   - cmake --build .
   - ctest --output-on-failure
