benchmark brigand::fold[_left]

--- a/benchmark/type/fold_left/CMakeLists.txt
+++ b/benchmark/type/fold_left/CMakeLists.txt
@@ -3,9 +3,10 @@
 # (See accompanying file LICENSE.md or copy at http://boost.org/LICENSE_1_0.txt)
 
 set(datasets)
-add_dataset(datasets dataset.type.fold_left.meta.list   meta.list.cpp.erb   "(0...500).step(10)")
-add_dataset(datasets dataset.type.fold_left.metal.list  metal.list.cpp.erb  "(0...500).step(10)")
-add_dataset(datasets dataset.type.fold_left.mpl.list    mpl.list.cpp.erb    "(1..50).step(1)")
-add_dataset(datasets dataset.type.fold_left.mpl.vector  mpl.vector.cpp.erb  "(1..50).step(1)")
+add_dataset(datasets dataset.type.fold_left.brigand.list    brigand.list.cpp.erb    "(0...500).step(10)")
+add_dataset(datasets dataset.type.fold_left.meta.list       meta.list.cpp.erb       "(0...500).step(10)")
+add_dataset(datasets dataset.type.fold_left.metal.list      metal.list.cpp.erb      "(0...500).step(10)")
+add_dataset(datasets dataset.type.fold_left.mpl.list        mpl.list.cpp.erb        "(1..50).step(1)")
+add_dataset(datasets dataset.type.fold_left.mpl.vector      mpl.vector.cpp.erb      "(1..50).step(1)")
 
 add_chart(benchmark.type.fold_left DATASETS ${datasets})
