try to run only the decay example

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -35,4 +35,4 @@ build_script:
   - mkdir build
   - cd build
   - cmake .. -G"%CMAKE_GENERATOR%" -DBOOST_ROOT="C:\Libraries\boost_1_59_0"
-  - ctest --output-on-failure
+  - cmake --build build --target example.decay
