Go back to a surely failing state

--- a/test/add_dataset_median_of/CMakeLists.txt
+++ b/test/add_dataset_median_of/CMakeLists.txt
@@ -16,4 +16,4 @@ metabench_add_dataset(dummy1 dummy.cpp.erb "[1, 2, 3, 4]" MEDIAN_OF 1)
 metabench_add_dataset(dummy2 dummy.cpp.erb "[1, 2, 3, 4]" MEDIAN_OF 2)
 metabench_add_dataset(dummy3 dummy.cpp.erb "[1, 2, 3, 4]" MEDIAN_OF 3)
 metabench_add_dataset(dummy4 dummy.cpp.erb "[1, 2, 3, 4]" MEDIAN_OF 4)
-metabench_add_chart(check DATASETS dummy1 dummy2)
+metabench_add_chart(check DATASETS dummy1 dummy2 dummy3 dummy4)
