--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -35,4 +35,5 @@ build_script:
   - mkdir build
   - cd build
   - cmake .. -G"%CMAKE_GENERATOR%" -DBOOST_ROOT="C:\Libraries\boost_1_59_0"
-  - cmake --build build --target example.decay
+  - cmake --build .
+  - ctest --output-on-failure
