--- a/example/CMakeLists.txt
+++ b/example/CMakeLists.txt
@@ -17,7 +17,8 @@ metabench_add_dataset(example.std_decay decay/std_decay.cpp.erb "(0...500).step(
 
 metabench_add_dataset(example.my_decay decay/my_decay.cpp.erb "(0...500).step(100)" NAME "my decay")
 add_custom_target(should_trigger_the_bug
-    DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/example.my_decay.json)
+    DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/example.std_decay.json
+            ${CMAKE_CURRENT_BINARY_DIR}/example.my_decay.json)
 
 
 metabench_add_chart(example.decay
