simplify the CMake file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,8 +9,13 @@ project(Metabench CXX)
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR})
 include(metabench)
 
-enable_testing()
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_subdirectory(benchmark)
-add_subdirectory(example)
-add_subdirectory(test)
+metabench_add_dataset(example.std_decay example/decay/std_decay.cpp.erb "(0...500).step(100)" NAME std::decay)
+metabench_add_dataset(example.my_decay example/decay/my_decay.cpp.erb "(0...500).step(100)" NAME "my decay")
+
+add_custom_target(should_trigger_the_bug
+    DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/example.std_decay.json
+            ${CMAKE_CURRENT_BINARY_DIR}/example.my_decay.json)
+
