--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,8 @@ metabench_add_dataset(example.std_decay example/decay/std_decay.cpp.erb "(0...50
 metabench_add_dataset(example.my_decay example/decay/my_decay.cpp.erb "(0...500).step(100)" NAME "my decay")
 
 add_custom_target(should_trigger_the_bug
+    COMMAND "echo"
     DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/example.std_decay.json
-            ${CMAKE_CURRENT_BINARY_DIR}/example.my_decay.json)
+            ${CMAKE_CURRENT_BINARY_DIR}/example.my_decay.json
+    USES_TERMINAL)
 
