ok, so it fails after some (fixed?) number of times. let's remove the my_decay dataset

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,12 +12,9 @@ include(metabench)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-metabench_add_dataset(example.std_decay example/decay/std_decay.cpp.erb "(0...500).step(100)" NAME std::decay)
-metabench_add_dataset(example.my_decay example/decay/my_decay.cpp.erb "(0...500).step(100)" NAME "my decay")
+metabench_add_dataset(example.std_decay
+    example/decay/std_decay.cpp.erb "(0...500).step(100)" NAME "std::decay"
+)
 
 add_custom_target(should_trigger_the_bug
-    COMMAND "echo"
-    DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/example.std_decay.json
-            ${CMAKE_CURRENT_BINARY_DIR}/example.my_decay.json
-    USES_TERMINAL)
-
+    DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/example.std_decay.json)
