--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -34,5 +34,5 @@ before_build:
 build_script:
   - mkdir build
   - cd build
-  - cmake .. -G"%CMAKE_GENERATOR%" -DBOOST_ROOT="C:\Libraries\boost_1_59_0"
-  - cmake --build . --target should_trigger_the_bug
+  - cmake .. -G"%CMAKE_GENERATOR%"
+  - cmake --build . --target should_trigger_the_bug -- -v
