try something radical

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,18 +3,18 @@
 # (See accompanying file LICENSE.md or copy at http://boost.org/LICENSE_1_0.txt)
 
 cmake_minimum_required(VERSION 3.1)
+find_package(Ruby 2.1)
 
-project(Metabench CXX)
-
-list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR})
-include(metabench)
-
-set(CMAKE_CXX_STANDARD 11)
-set(CMAKE_CXX_STANDARD_REQUIRED ON)
-
-metabench_add_dataset(example.std_decay
-    example/decay/std_decay.cpp.erb "(0...500).step(100)" NAME "std::decay"
+file(WRITE main.cpp "int main() { }\n")
+add_executable(main main.cpp)
+add_custom_target(make_main
+    COMMAND ${RUBY_EXECUTABLE} -r time -r fileutils
+        -e "100.times do |i|"
+        -e "  puts %{#{i+1}th time}"
+        -e "  FileUtils.touch('main.cpp', mtime: Time.now+1)"
+        -e "  output = `\"${CMAKE_COMMAND}\" --build \"${CMAKE_BINARY_DIR}\" --target main`"
+        -e "  raise output if not $?.success?"
+        -e "end"
+    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+    VERBATIM
 )
-
-add_custom_target(should_trigger_the_bug
-    DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/example.std_decay.json)
