--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -35,4 +35,4 @@ build_script:
   - mkdir build
   - cd build
   - cmake .. -G"%CMAKE_GENERATOR%"
-  - cmake --build . --target should_trigger_the_bug -- -v
+  - cmake --build . --target make_main -- -v
