--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -38,4 +38,4 @@ build_script:
   - mkdir build
   - cd build
   - cmake .. -G"%CMAKE_GENERATOR%"
-  - cmake --build . --target make_main -- -v
+  - cmake --build . --target make_main
