--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,6 +8,7 @@ shallow_clone: true
 branches:
   except:
     - /pr\/.+/
+    - /.+/ # Temporarily disable all branches
 
 build:
   verbosity: detailed
