--- a/benchmark/hetero/make/CMakeLists.txt
+++ b/benchmark/hetero/make/CMakeLists.txt
@@ -4,7 +4,7 @@
 
 set(datasets)
 add_dataset(datasets dataset.hetero.make.fusion.list      fusion.list.cpp.erb         "(0..50).step(10)")
-add_dataset(datasets dataset.hetero.make.fusion.map       fusion.map.cpp.erb          "(0..50).step(10).to_a + (100..500).step(100).to_a")
+add_dataset(datasets dataset.hetero.make.fusion.map       fusion.map.cpp.erb          "(0..50).step(10).to_a + [100, 200]")
 add_dataset(datasets dataset.hetero.make.fusion.vector    fusion.vector.cpp.erb       "(0..50).step(10)")
 add_dataset(datasets dataset.hetero.make.hana.basic_tuple hana.basic_tuple.cpp.erb    "(0..50).step(10).to_a + (100..500).step(100).to_a")
 add_dataset(datasets dataset.hetero.make.hana.map         hana.map.cpp.erb            "(0..50).step(10).to_a + (100..500).step(100).to_a")
