--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ addons:
       - g++-4.8
       - g++-4.9
       - g++-5
+      - g++-6
 
     sources:
       - ubuntu-toolchain-r-test
@@ -36,6 +37,7 @@ env:
     - COMPILER=g++-4.8     CMAKE_GENERATOR="Unix Makefiles"
     - COMPILER=g++-4.9     CMAKE_GENERATOR="Unix Makefiles"
     - COMPILER=g++-5       CMAKE_GENERATOR="Unix Makefiles"
+    - COMPILER=g++-6       CMAKE_GENERATOR="Unix Makefiles"
 
     # Also test on ninja
     - COMPILER=clang++-3.8 CMAKE_GENERATOR="Ninja"
@@ -82,7 +84,7 @@ install:
       (cd llvm/build/projects/libcxx && make install -j2)
       (cd llvm/build/projects/libcxxabi && make install -j2)
 
-      export CXXFLAGS="-isystem ${DEPS_DIR}/llvm/install/include/c++/v1"
+      export CXXFLAGS="-nostdinc++ -isystem ${DEPS_DIR}/llvm/install/include/c++/v1"
       export LDFLAGS="-L ${DEPS_DIR}/llvm/install/lib -l c++ -l c++abi"
       export LD_LIBRARY_PATH="${LD_LIBRARY_PATH}:${DEPS_DIR}/llvm/install/lib"
     fi
