--- a/benchmark/hetero/at_key/deep/CMakeLists.txt
+++ b/benchmark/hetero/at_key/deep/CMakeLists.txt
@@ -3,8 +3,8 @@
 # (See accompanying file LICENSE.md or copy at http://boost.org/LICENSE_1_0.txt)
 
 set(datasets)
-add_dataset(datasets dataset.hetero.at_key-deep.fusion.map fusion.map.cpp.erb "(0..100).step(10).to_a" ENV "{range: (0..150).to_a}")
-add_dataset(datasets dataset.hetero.at_key-deep.hana.map   hana.map.cpp.erb   "(0..150).step(10).to_a" ENV "{range: (0..150).to_a}")
-add_dataset(datasets dataset.hetero.at_key-deep.hana.tuple hana.tuple.cpp.erb "(0..150).step(10).to_a" ENV "{range: (0..150).to_a}")
+add_dataset(datasets dataset.hetero.at_key-deep.fusion.map fusion.map.cpp.erb "(0..50).step(10).to_a + [75, 100]" ENV "{range: (0..100).to_a}")
+add_dataset(datasets dataset.hetero.at_key-deep.hana.map   hana.map.cpp.erb   "(0..50).step(10).to_a + [75, 100]" ENV "{range: (0..100).to_a}")
+add_dataset(datasets dataset.hetero.at_key-deep.hana.tuple hana.tuple.cpp.erb "(0..50).step(10).to_a + [75, 100]" ENV "{range: (0..100).to_a}")
 
 add_chart(benchmark.hetero.at_key-deep DATASETS ${datasets})
