Disable the median filter for the benchmark suite
As discussed in #149, generating the benchmarks without the median filter
does not seem to have a significant negative impact on the precision of
results. Hence, we disable it for now since that'll make the Travis build
run about 3 times faster, and hence resolve #145.

Fixes #145

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -22,7 +22,7 @@ macro(add_dataset datasets category case lib datatype path_to_template range)
     set(name "${lib}.${datatype}")
     set(dataset "dataset.${category}.${case}.${name}")
     set(args ${dataset} ${datatype} ${path_to_template} ${range}
-        NAME ${name} OUTPUT ${name}.json ${ARGN} MEDIAN_OF 3
+        NAME ${name} OUTPUT ${name}.json ${ARGN}
     )
 
     if("${lib}" STREQUAL "brigand")
