--- a/benchmark/hetero/insert/CMakeLists.txt
+++ b/benchmark/hetero/insert/CMakeLists.txt
@@ -3,7 +3,7 @@
 # (See accompanying file LICENSE.md or copy at http://boost.org/LICENSE_1_0.txt)
 
 set(datasets)
-add_dataset(datasets hetero insert hana map hana.map.cpp.erb "(0..50).step(10).to_a + [100, 200, 300]" ENV "{k: 1}")
-add_dataset(datasets hetero insert hana set hana.set.cpp.erb "(0..50).step(10).to_a + [100, 200, 300]" ENV "{k: 1}")
+add_dataset(datasets hetero insert hana map hana.map.cpp.erb "(0..50).step(10).to_a + (100..300).step(50).to_a" ENV "{k: 1}")
+add_dataset(datasets hetero insert hana set hana.set.cpp.erb "(0..50).step(10).to_a + (100..300).step(50).to_a" ENV "{k: 1}")
 
 add_chart(hetero insert DATASETS ${datasets})
