--- a/benchmark/hetero/intersection/CMakeLists.txt
+++ b/benchmark/hetero/intersection/CMakeLists.txt
@@ -3,6 +3,6 @@
 # (See accompanying file LICENSE.md or copy at http://boost.org/LICENSE_1_0.txt)
 
 set(datasets)
-add_dataset(datasets hetero intersection hana set hana.set.cpp.erb "(0..50).step(10)" ENV "{k: 3}")
+add_dataset(datasets hetero intersection hana set hana.set.cpp.erb 3 "(0..50).step(10)")
 
 add_chart(hetero intersection DATASETS ${datasets})
