--- a/benchmark/hetero/lexicographical_compare/CMakeLists.txt
+++ b/benchmark/hetero/lexicographical_compare/CMakeLists.txt
@@ -3,6 +3,6 @@
 # (See accompanying file LICENSE.md or copy at http://boost.org/LICENSE_1_0.txt)
 
 set(datasets)
-add_dataset(datasets hetero lexicographical_compare hana tuple hana.tuple.cpp.erb "(0..50).step(10).to_a + [100]" ENV "{k: 1}")
+add_dataset(datasets hetero lexicographical_compare hana tuple hana.tuple.cpp.erb 1 "(0..50).step(10).to_a + (100..100).step(50).to_a")
 
 add_chart(hetero lexicographical_compare DATASETS ${datasets})
