--- a/benchmark/type/at/CMakeLists.txt
+++ b/benchmark/type/at/CMakeLists.txt
@@ -3,11 +3,11 @@
 # (See accompanying file LICENSE.md or copy at http://boost.org/LICENSE_1_0.txt)
 
 set(datasets)
-add_dataset(datasets type at brigand list   brigand.list.cpp.erb "[1] + (10..50).step(10).to_a + (100..500).step(50).to_a" ENV "{k: 1, p: 100}")
-add_dataset(datasets type at hana    types  hana.types.cpp.erb   "[1] + (10..50).step(10).to_a + (100..500).step(50).to_a" ENV "{k: 1, p: 100}")
-add_dataset(datasets type at meta    list   meta.list.cpp.erb    "[1] + (10..50).step(10).to_a + (100..500).step(50).to_a" ENV "{k: 1, p: 100}")
-add_dataset(datasets type at metal   list   metal.list.cpp.erb   "[1] + (10..50).step(10).to_a + (100..500).step(50).to_a" ENV "{k: 1, p: 100}")
-add_dataset(datasets type at mpl     list   mpl.list.cpp.erb     "[1] + (10..50).step(10).to_a"                            ENV "{k: 1, p: 100}")
-add_dataset(datasets type at mpl     vector mpl.vector.cpp.erb   "[1] + (10..50).step(10).to_a"                            ENV "{k: 1, p: 100}")
+add_dataset(datasets type at brigand list   brigand.list.cpp.erb 1 "[1] + (10..50).step(10).to_a + (100..500).step(50).to_a" "p\;100")
+add_dataset(datasets type at hana    types  hana.types.cpp.erb   1 "[1] + (10..50).step(10).to_a + (100..500).step(50).to_a" "p\;100")
+add_dataset(datasets type at meta    list   meta.list.cpp.erb    1 "[1] + (10..50).step(10).to_a + (100..500).step(50).to_a" "p\;100")
+add_dataset(datasets type at metal   list   metal.list.cpp.erb   1 "[1] + (10..50).step(10).to_a + (100..500).step(50).to_a" "p\;100")
+add_dataset(datasets type at mpl     list   mpl.list.cpp.erb     1 "[1] + (10..50).step(10).to_a"                            "p\;100")
+add_dataset(datasets type at mpl     vector mpl.vector.cpp.erb   1 "[1] + (10..50).step(10).to_a"                            "p\;100")
 
 add_chart(type at DATASETS ${datasets})
