[Travis] Run tests using -j3 to speed up builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -106,7 +106,7 @@ script:
 
   - |
     if [[ "${TRAVIS_EVENT_TYPE}" != "cron" ]]; then
-      (cd build && ctest --output-on-failure)
+      (cd build && ctest --output-on-failure -j3)
     fi
 
   # During nightly builds, we generate the benchmarks and update the gh-pages
