--- a/.travis.yml
+++ b/.travis.yml
@@ -187,7 +187,7 @@ script:
 
       pushd tmp &&
       git add --all . &&
-      git commit -m "[${COMPILER}] (${PART}/${PARTS}) Update benchmarks ${BENCHMARKS[@]}" &&
+      git commit -m "[${COMPILER}] Update benchmarks (${PART}/${PARTS})" &&
       # Suppress output to avoid leaking the token
       travis_retry git push origin gh-pages &>/dev/null &&
       popd
